Fixed image alignment
for the text over the image on the main page

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body {
 .text-block {
   position: absolute;
   bottom: 20px;
-  right: 20px;
+  left: 20px;
   background-color: black;
   color: white;
   padding-left: 20px;
